...
            app:destination="@id/navigation_home"
            app:popUpTo="@id/splashFragment"
            app:popUpToInclusive="true" />

        <action
            android:id="@+id/action_splashFragment_to_loginFragment"
            app:destination="@id/loginFragment"
            app:popUpTo="@id/splashFragment"
            app:popUpToInclusive="true" />
    </fragment>

    <fragment
        android:id="@+id/loginFragment"
...
